--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="absolute  right-24 bg-white navy-text px-4 py-2 rounded-lg shadow-lg">
                         <div class="flex items-center">
                             <i class="fas fa-phone-alt gold-text mr-2"></i>
-                            <span>+92 302 9015909</span>
+                            <span>+447440149805</span>
                         </div>
                     </div>
                 </div>
@@ -519,7 +519,7 @@
                             </div>
                             <div>
                                 <h4 class="font-semibold gold-text mb-1">Phone</h4>
-                                <p class="text-white">+92 302 9015909</p>
+                                <p class="text-white">+447440149805</p>
                             </div>
                         </div>
                         
@@ -643,7 +643,7 @@
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
-                    <p><i class="fas fa-phone-alt gold-text mr-2"></i> +92 302 9015909</p>
+                    <p><i class="fas fa-phone-alt gold-text mr-2"></i> +447440149805</p>
                     <p class="mt-2"><i class="fas fa-envelope gold-text mr-2"></i> dishamehndiratta481@gmail.com</p>
                 </div>
             </div>
